Fix issue with porfolio position UI and chart on mobile

--- a/apps/earn-protocol/components/organisms/Charts/components/HistoricalLegend.module.scss
+++ b/apps/earn-protocol/components/organisms/Charts/components/HistoricalLegend.module.scss
@@ -1,5 +1,9 @@
 .historicalLegendWrapper {
-  margin-left: 80px;
+  margin-left: 0;
+
+  @media (min-width: 768px) {
+    margin-left: 80px;
+  }
 }
 
 .historicalLegendItemWrapper {
